1、Room 静态资源整合问题处理  静态资源映射问题原理需要多多了解 2、支持one to one 的基础上 整合 Room 群聊视频模式

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,11 +28,11 @@
 <!--<script src="js/platformwebsocket.js"></script>-->
 
 <!--<script src="js/nettywebsocket.js"></script>-->
-<script src="js/layim/js/message.js"></script>
+<!--<script src="js/layim/js/message.js"></script>
 <script src="js/layim/js/messagebody.js"></script>
 <script src="js/layim/dwr/engine.js"></script>
 <script src="js/layim/dwr/interface/Imwebserver.js"></script>
-<script src="js/layui/layui.js"></script>
+<script src="js/layui/layui.js"></script>-->
 <title>Kurento Tutorial 4: Video Call 1 to 1 with WebRTC</title>
 	<style>
 		.page-header {
