群聊用户进入房间，显示用户名称问题修改；

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,15 +25,8 @@
 <script src="js/layim/js/util.js"></script>
 <script src="js/kurento-utils.js"></script>
 <script src="js/index.js"></script>
-<!--<script src="js/platformwebsocket.js"></script>-->
 
-<!--<script src="js/nettywebsocket.js"></script>-->
-<!--<script src="js/layim/js/message.js"></script>
-<script src="js/layim/js/messagebody.js"></script>
-<script src="js/layim/dwr/engine.js"></script>
-<script src="js/layim/dwr/interface/Imwebserver.js"></script>
-<script src="js/layui/layui.js"></script>-->
-<title>Kurento Tutorial 4: Video Call 1 to 1 with WebRTC</title>
+<title>Arj WebRtc: Video Call 1 to 1 with WebRTC</title>
 	<style>
 		.page-header {
 			margin: 9px 0 9px;
@@ -47,15 +40,7 @@
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse"
 						data-target=".navbar-collapse"></button>
-					<a class="navbar-brand" href=".">Kurento Tutorial</a>
-				</div>
-				<div class="collapse navbar-collapse"
-					id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a
-							href="https://github.com/Kurento/kurento-tutorial-java/tree/master/kurento-one2one-call"><span
-								class="glyphicon glyphicon-file"></span> Source Code</a></li>
-					</ul>
+					<a class="navbar-brand" href=".">视频通讯</a>
 				</div>
 			</div>
 		</div>
