图标问题修改 登陆窗口问题修改 退出时，关闭窗口异常问题处理 配置文件修改 MD文档更新 springboot 升级，解决tomcat 异常问题

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,12 +8,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="img/kurento.png" type="image/png" />
 
-<link rel="stylesheet"
-	href="webjars/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet"
-	href="webjars/ekko-lightbox/dist/ekko-lightbox.min.css">
+<link rel="stylesheet"	href="webjars/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet"	href="webjars/ekko-lightbox/dist/ekko-lightbox.min.css">
 <link rel="stylesheet" href="webjars/demo-console/index.css">
 <link rel="stylesheet" href="css/kurento.css">
+
+<link rel="icon" type="image/x-icon" href="img/logo.ico">
 
 <script src="webjars/jquery/dist/jquery.min.js"></script>
 <script src="webjars/bootstrap/dist/js/bootstrap.min.js"></script>
