1、单聊视频页面调整

--- a/src/main/resources/static/peerToPeer.html
+++ b/src/main/resources/static/peerToPeer.html
@@ -67,11 +67,11 @@
 			<div class="col-md-7">
 				<div id="videoBig">
 					<video id="videoOutput" autoplay width="640px" height="480px"
-						poster="../static/img/webrtc.png"></video>
+						poster="../static/img/BG.png"></video>
 				</div>
 				<div id="videoSmall">
 					<video id="videoInput" autoplay width="240px" height="180px"
-						poster="../static/img/webrtc.png"></video>
+						poster="../static/img/BG.png"></video>
 				</div>
 			</div>
 		</div>
