--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="overflow:hidden">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="cache-control" content="no-cache">
@@ -11,6 +11,8 @@
 <link rel="stylesheet"	href="webjars/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet"	href="webjars/ekko-lightbox/dist/ekko-lightbox.min.css">
 <link rel="stylesheet" href="webjars/demo-console/index.css">
+<link rel="styleSheet" href="css/style.css" type="text/css" media="screen">
+<link rel="styleSheet" href="iconfont/iconfont.css" type="text/css" media="screen">
 <link rel="stylesheet" href="css/kurento.css">
 
 <link rel="icon" type="image/x-icon" href="img/logo.ico">
@@ -29,35 +31,52 @@
 	<style>
 		.page-header {
 			margin: 9px 0 9px;
+			border-bottom: 1px solid #0e2a4c;
 		}
 	</style>
 </head>
 <body>
 	<header>
-		<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar navbar-inverse">
 			<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse"
-						data-target=".navbar-collapse"></button>
 					<a class="navbar-brand" href=".">视频通讯</a>
 				</div>
 			</div>
 		</div>
 	</header>
-	<div class="container">
-		<div class="page-header">
-		</div>
-		<div class="row">
-			<div class="col-md-7">
-				<div id="videoBig">
-					<video id="videoOutput" autoplay width="640px" height="480px"
-						poster="img/webrtc.png"></video>
-				</div>
-				<div id="videoSmall">
-					<video id="videoInput" autoplay width="240px" height="180px"
-						poster="img/webrtc.png"></video>
-				</div>
+	<div class="container video-container">
+		<div style = "width: 100%;height: 100%;position: relative;">
+			<div id="videoBig">
+				<video id="videoOutput" autoplay width="100%" height="auto"
+					poster="img/BG.png"></video>
 			</div>
+			<div id="videoSmall">
+				<video id="videoInput" autoplay width="100%" height="auto"
+					poster="img/BG.png"></video>
+			</div>
+		</div>
+		<div class="room-footer">
+			<ul class="clearfix">
+				<li>
+					<a class="operationButton" onmouseup="excuteVideoStream()">
+						<i class="iconfont iconshipingjinzhi-copy"></i>
+					</a>
+					<p class="text" id="audioOnly" >关闭视频</p>
+				</li>
+				<li>
+					<a class="operationButton"onmouseup="excuteAudioStream()">
+						<i class="iconfont iconjingyin"></i>
+					</a>
+					<p class="text"  id="videoOnly" >静音</p>
+				</li>
+				<li>
+					<a class="operationButton" id="button-leave" onmouseup="leaveRoom()">
+						<i class="iconfont icontuichu"></i>
+					</a>
+					<p class="text">退出</p>
+				</li>
+			</ul>
 		</div>
 	</div>
 </body>
